--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1> Hello2 <h1>
 
-<link rel="logo" type="image/png" href="images/logo.png" />
+<link rel="logo" type="image/png" href="images/Logo (3) 1.png" />
