--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <h1> Hello2 <h1>
 
-<link rel="logo" type="image/png" href="images/Logo (3) 1.png" />
+<div class = "logo">
+  <img src="images/Logo (3) 1.png">
+</div>
